# Corvid-DSP

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  REQUIREMENTS.md  TODO.md
2-OP/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  REQUIREMENTS.md  TODO.md
2-OP/docs/: DESIGN.md
2-OP/src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Dist308/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt
Dist308/src/: PluginProcessor.cpp  PluginProcessor.h
Warm/: CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  REQUIREMENTS.md
Warm/bench/: dsp_bench.cpp
Warm/docs/: TODO.md
Warm/src/: PluginEditor.cpp  PluginProcessor.h
src/: PluginEditor.h  PluginProcessor.cpp
